Bug 2021266 - Let the dialog title not overflow the dialog. r=freaktechnik,jmiksic
Differential Revision: https://phabricator.services.mozilla.com/D286570

--HG--
extra : amend_source : 5a10931bc3a9bb4ec13a2a020f1f6f27a82b2fdd

--- a/mail/themes/shared/mail/calendar/calendarDialog.css
+++ b/mail/themes/shared/mail/calendar/calendarDialog.css
@@ -46,6 +46,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  overflow: hidden;
   padding: calc(var(--calendar-dialog-title-bar-padding-block) + var(--calendar-dialog-top-bar-height)) var(--calendar-dialog-row-padding-inline)
     var(--calendar-dialog-title-bar-padding-block);
   gap: 4px;
